<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent"
    android:layout_marginTop="15dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/flsw_continuewith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:textStyle="normal"
        android:text="@string/continuewith"/>

    <RelativeLayout
        android:id="@+id/flsw_fgcontain"
        android:layout_below="@+id/flsw_continuewith"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/googlesignin"
            android:layout_centerVertical="true"
            app:cardCornerRadius="5dp"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:clickable="true"
            app:cardElevation="0dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageviewgoogle"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/search"
                    android:scaleType="centerInside"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/textviewgoogle"
                    android:layout_toEndOf="@+id/imageviewgoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="17dp"
                    android:text="GOOGLE"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="17sp"/>


            </RelativeLayout>



        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/facebooksignin"
            android:layout_toEndOf="@+id/googlesignin"
            android:layout_marginStart="15dp"
            android:layout_centerVertical="true"
            app:cardCornerRadius="5dp"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:clickable="true"
            app:cardElevation="0dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageviewfacebook"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/facebook"
                    android:scaleType="centerInside"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/textviewfacebook"
                    android:layout_toEndOf="@+id/imageviewfacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:text="FACEBOOK"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="17sp"/>


            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>


    <TextView
        android:id="@+id/flsw_useemail"
        android:layout_below="@id/flsw_fgcontain"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/useemailadress"
        android:textColor="@android:color/white"
        android:textStyle="normal"
        android:textSize="12sp"/>


    <LinearLayout
        android:id="@+id/flsw_loginsigncontain"
        android:layout_below="@+id/flsw_useemail"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>


        <ImageView
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/rectangle"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/signup_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textStyle="bold"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    </LinearLayout>









</RelativeLayout>