<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <RelativeLayout
        android:id="@+id/toolrel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="5dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/white">

        <ImageButton
            android:id="@+id/backtomain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_keyboard_backspace_black_24dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/abouttitle"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_below="@+id/toolrel"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">


            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="Info"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/info2"
                android:layout_below="@+id/info"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/info"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/abttextthree"
                android:layout_below="@+id/info2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:text="@string/dev"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/abtcardthree"
                android:layout_below="@+id/abttextthree"
                android:layout_margin="10dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp"
                android:layout_width="match_parent"
                android:layout_height="120dp">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/one"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/grdientabt"
                        android:layout_width="match_parent"
                        android:layout_height="60dp">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profcrc"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/prof"
                            app:civ_border_width="1dp"
                            app:civ_border_color="@android:color/black"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="20dp"/>

                        <LinearLayout
                            android:id="@+id/lineardev"
                            android:orientation="vertical"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/profcrc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="RelativeOverlap">

                            <TextView
                                android:id="@+id/textdevone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:text="@string/devname"
                                android:textStyle="bold"
                                android:textColor="@android:color/white"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/textdevtwo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:text="@string/devtic"
                                android:textStyle="bold"
                                android:textColor="@android:color/white"
                                android:textSize="9sp"
                                tools:ignore="SmallSp" />

                        </LinearLayout>


                        <ImageButton
                            android:id="@+id/instagramabt"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="20dp"
                            android:background="@android:color/transparent"
                            android:src="@drawable/instagram"
                            android:scaleType="fitXY"
                            tools:ignore="ContentDescription" />



                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/two"
                        android:layout_below="@+id/one"
                        android:background="@drawable/grdientabt"
                        android:layout_width="match_parent"
                        android:layout_height="120dp">


                        <TextView
                            android:id="@+id/textdevones"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20sp"
                            android:text="Flareui.com"
                            android:textStyle="bold"
                            android:layout_centerVertical="true"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />



                        <ImageButton
                            android:id="@+id/instagramabts"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="20dp"
                            android:background="@android:color/transparent"
                            android:src="@drawable/instagram"
                            android:scaleType="fitXY"
                            tools:ignore="ContentDescription" />

                    </RelativeLayout>

                </RelativeLayout>



            </android.support.v7.widget.CardView>


            <TextView
                android:layout_below="@+id/abtcardthree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Made with ❤ in India"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"
                android:textSize="20sp" />



        </RelativeLayout>


    </RelativeLayout>



</RelativeLayout>
